--- a/app/views/premonitions/_form.html.erb
+++ b/app/views/premonitions/_form.html.erb
@@ -99,7 +99,7 @@
                   <label for="inputDateHappen" class="col-lg-5 control-label">Where were you when you had the premonition?, you must locate on the map where you were when you had the premonition, no need be the exact location. It might be worth the city and the country.  
                     <br><br>
                       <div class="input-group">
-                          <%= f.text_field :location_user_text, class: "form-control", id: "report_location" %>
+                          <%= f.text_field :location_user_description, class: "form-control", id: "report_location" %>
                           <span class="input-group-btn">
                             <button type="button" class="btn btn-default" onclick="javascript:codeAddress();">Find location</button>
                           </span>
@@ -121,7 +121,7 @@
                   <label for="inputDateHappen" class="col-lg-5 control-label">Where does your premonition happens?, If your premonition happens somewhere, locate your premonition on this map.  
                     <br><br>
                       <div class="input-group">
-                          <%= f.text_field :location_premonition_text, class: "form-control", id: "report_location2" %>
+                          <%= f.text_field :location_premonition_description, class: "form-control", id: "report_location2" %>
                           <span class="input-group-btn">
                             <button type="button" class="btn btn-default" onclick="javascript:codeAddress2();">Find location</button>
                           </span>
