--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -38,7 +38,8 @@
         <p><strong>Precognition</strong>, also called <strong>future sight</strong>, and <strong>second sight</strong>, is a type of <strong>extrasensory perception</strong> that would involve the acquisition or effect of future information that cannot be deducted from presently available and normally acquired sense-based information.</p>
         <small>Precognition definition from <cite title="Wikipedia" itemprop="creator">Wikipedia</cite></small>
         </blockquote>
-        <p><a class="btn btn-primary btn-lg" role="button" id="attach_box1">Learn more &raquo;</a></p>
+        <p>
+          <%= link_to "Learn more » ", {controller: "premonitions",action: "belief"}, class: "btn btn-primary btn-lg", role: "button"%></p>
       </div>
 
       <div class="container">
@@ -76,7 +77,7 @@
         <div class="col-md-4" itemscope itemtype="http://schema.org/WebPageElement">
           <h2 itemprop="headline">Find People like YOU</h2>
           <p>A connection might exist between you and other people all over the world. Search our premonitions database and discover if you had a shared vision.</p>
-          <p><a class="btn btn-default" href="#" role="button" id="attach_box3">View details &raquo;</a></p>
+          <p><a class="btn btn-default" target="_blank" href="https://www.facebook.com/unveiledfuture" role="button">View details &raquo;</a></p>
         </div>
       </div>
 
