--- a/app/views/premonitions/show.html.erb
+++ b/app/views/premonitions/show.html.erb
@@ -50,7 +50,7 @@
                       <div class="panel-heading">
                         <header><h3 class="panel-title">The premonition in one sentence</h3></header>
                       </div>
-                      <div class="panel-body">
+                      <div class="panel-body" itemprop="name">
                           <%= @premonition.title %>
                       </div>
                 </div>
