--- a/app/views/premonitions/belief.html.erb
+++ b/app/views/premonitions/belief.html.erb
@@ -17,6 +17,9 @@
             <li> 
                 <%= link_to "Premonitions Database List", {controller: "premonitions", action: "index"}, role: "button", 'data-no-turbolink' => true, 'itemprop' => "url" %>
             </li>
+             <li> 
+                <%= link_to "About", {controller: "premonitions", action: "about"}, role: "button", 'itemprop' => "url" %>
+            </li>
             <li>
               <%= link_to(raw("<div itemprop='name'>Login with Twitter</div>"), '/auth/twitter', itemprop: "url") %>
             </li>
