--- a/app/views/premonitions/about.html.erb
+++ b/app/views/premonitions/about.html.erb
@@ -67,7 +67,7 @@
            </div>   
           <div class="row" style="margin-top:30px">
                 <div class="col-lg-6">   
-                       <div class="panel panel-primary">
+                       <div class="panel panel-default">
                           <div class="panel-heading">
                             <h3 class="panel-title">You can send us your premonition through this form</h3>
                           </div>
@@ -77,7 +77,7 @@
                         </div>
                 </div>
                 <div class="col-lg-6"> 
-                        <div class="panel panel-primary">
+                        <div class="panel panel-default">
                           <div class="panel-heading">
                             <h3 class="panel-title">If you want to send any other information you can do it to this email</h3>
                           </div>
