--- a/app/views/premonitions/show.html.erb
+++ b/app/views/premonitions/show.html.erb
@@ -196,8 +196,14 @@
                               <div class="panel-heading">
                                     <h3 class="panel-title">Personal conclusions about the premonition</h3>
                               </div>
-                              <div class="panel-body">
+                              <div class="panel-body"><%
+                                unless @premonition.type.blank?
+                                  %>
                                     <%= @premonition.own_conclusions.html_safe %>   
+                                <%
+                                end
+                                  %>
+
                               </div>       
                           </div>
                     </div>
