drop image cloudinary

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,10 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://www.unveiledfuture.com/" itemprop="url">
-            <img src="http://res.cloudinary.com/dr3vzmqaf/image/upload/v1405633756/reported_date_20140717/unveiledfuture_logo222_fl4krg.png"/>
-            </a>
-            <%#= image_tag "unveiledfuture_logo.png", itemprop: "image"%></a>
+          <a class="navbar-brand" href="http://www.unveiledfuture.com/" itemprop="url"><%= image_tag "unveiledfuture_logo.png", itemprop: "image"%></a>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav navbar-right" itemscope="itemscope" itemtype="http://schema.org/SiteNavigationElement">
