--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,9 @@
   <meta name='keywords' content='Premonition, Precognition, Future sight, Second sight, Extrasensory perception, ESP, Unconscious perception, Dreams, Visions, Déjà vu, Parapsychology, Anomalous cognition, Fortune-telling, Retrocognition, Unveiled Future'/>
   <meta name='description' content='Premonitions, precognitions, visions all over the world'/>
   <meta property="og:type" content="website"/>
-  <meta property="og:title" content="Premonitions - Unveiled Future"/>
+  <meta property="og:title" content="<% unless @title.blank? %><%=@title%><% end %>Premonitions, precognitions, visions all over the world - Unveiled Future"/>
   <meta property="og:site_name" content="Premonitions - Unveiled Future"/>
-  <meta property="og:description" content="Premonitions, precognitions, visions all over the world"/>
+  <meta property="og:description" content="<% unless @title.blank? %><%=@title%><% end %>Premonitions, precognitions, visions all over the world"/>
   <meta property="og:image" content="http://www.unveiledfuture.com/assets/unveiledfuture_logo-3773bcb060053c2020842b7b1fde3cdc.png" />
   <meta property="og:locale" content="en_US" />
 
